[package]
name = "rust-rocksdb"
description = "Rust wrapper for Facebook's RocksDB embeddable database"
version = "0.40.0"
edition = "2021"
rust-version = "1.81.0"
authors = [
    "Tyler Neely <t@jujit.su>",
    "David Greenberg <dsg123456789@gmail.com>",
]
repository = "https://github.com/zaidoon1/rust-rocksdb"
license = "Apache-2.0"
categories = ["database"]
keywords = ["database", "embedded", "LSM-tree", "persistence"]
homepage = "https://github.com/zaidoon1/rust-rocksdb"
exclude = [".gitignore", ".travis.yml", "deploy.sh", "test/**/*"]

[workspace]
members = ["librocksdb-sys"]

[features]
default = ["snappy", "lz4", "zstd", "zlib", "bzip2", "bindgen-runtime"]
jemalloc = ["rust-librocksdb-sys/jemalloc"]
io-uring = ["rust-librocksdb-sys/io-uring"]
valgrind = []
snappy = ["rust-librocksdb-sys/snappy"]
lz4 = ["rust-librocksdb-sys/lz4"]
zstd = ["rust-librocksdb-sys/zstd"]
zlib = ["rust-librocksdb-sys/zlib"]
bzip2 = ["rust-librocksdb-sys/bzip2"]
rtti = ["rust-librocksdb-sys/rtti"]
mt_static = ["rust-librocksdb-sys/mt_static"]
multi-threaded-cf = []
serde1 = ["serde"]
malloc-usable-size = ["rust-librocksdb-sys/malloc-usable-size"]
zstd-static-linking-only = ["rust-librocksdb-sys/zstd-static-linking-only"]
bindgen-runtime = ["rust-librocksdb-sys/bindgen-runtime"]
bindgen-static = ["rust-librocksdb-sys/bindgen-static"]
lto = ["rust-librocksdb-sys/lto"]

[dependencies]
libc = "0.2"
rust-librocksdb-sys = { path = "librocksdb-sys", version = "0.37.0", default-features = false, features = [
    "static",
] }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
trybuild = "1"
tempfile = "3"
pretty_assertions = "1"
bincode = "1"
serde = { version = "1", features = ["derive"] }
