[package]
name = "rust-librocksdb-sys"
version = "0.39.0+10.5.1"
edition = "2021"
rust-version = "1.81.0"
authors = [
    "Karl Hobley <karlhobley10@gmail.com>",
    "Arkadiy Paronyan <arkadiy@ethcore.io>",
]
license = "MIT/Apache-2.0/BSD-3-Clause"
description = "Native bindings to librocksdb"
readme = "README.md"
repository = "https://github.com/zaidoon1/rust-rocksdb"
keywords = ["bindings", "ffi", "rocksdb"]
categories = ["api-bindings", "database", "external-ffi-bindings"]
links = "rocksdb"

exclude = [
    ".gitignore",
    "*.yml",
    "snappy/testdata",
    "*/doc",
    "*/docs",
    "*/examples",
    "*/tests",
    "tests",
    "*.md",
]

[features]
# Default: vendored build with static linking
default = ["vendored", "static", "bindgen-runtime"]

# Linking strategy features (mutually exclusive)
static = ["libz-sys?/static", "bzip2-sys?/static"]  # Prefer static linking
dynamic = []  # Prefer dynamic linking
static-only = ["static"]  # Force static linking only

# Build source features
vendored = []  # Build from vendored sources (default)
no-vendor = ["bindgen-runtime"]  # Force system library usage (needs bindgen)

jemalloc = ["tikv-jemalloc-sys"]
bindgen-runtime = ["bindgen/runtime"]
bindgen-static = ["bindgen/static"]
mt_static = []  # MSVC static runtime
io-uring = ["pkg-config"]

# Compression features
snappy = []
lz4 = ["lz4-sys"]
zstd = ["zstd-sys"]
zlib = ["libz-sys"]
bzip2 = ["bzip2-sys"]
zstd-static-linking-only = []

# Advanced features
rtti = []  # Enable RTTI support
malloc-usable-size = []  # Enable malloc_usable_size
lto = []  # Link-time optimization (requires clang)

[dependencies]
libc = "0.2"
tikv-jemalloc-sys = { version = "0.6", features = [
    "unprefixed_malloc_on_supported_platforms",
], optional = true }
lz4-sys = { version = "1.11", optional = true }
zstd-sys = { version = "2.0", features = [
    "zdict_builder",
    "experimental",
], optional = true }
libz-sys = { version = "1.1", default-features = false, optional = true }
bzip2-sys = { version = "0.1", default-features = false, optional = true }

[dev-dependencies]
const-str = "0.6"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
cc = { version = "1.2", features = ["parallel"] }
bindgen = { version = "0.72", default-features = false }
glob = "0.3"
pkg-config = { version = "0.3", optional = true }
libc = "0.2"
