[package]
name = "rust-librocksdb-sys"
version = "0.45.1+11.1.1"
edition = "2024"
rust-version = "1.89.0"
authors = [
    "Karl Hobley <karlhobley10@gmail.com>",
    "Arkadiy Paronyan <arkadiy@ethcore.io>",
]
license = "MIT/Apache-2.0/BSD-3-Clause"
description = "Native bindings to librocksdb"
readme = "README.md"
repository = "https://github.com/zaidoon1/rust-rocksdb"
keywords = ["bindings", "ffi", "rocksdb"]
categories = ["api-bindings", "database", "external-ffi-bindings"]
links = "rocksdb"

exclude = [
    ".gitignore",
    "*.yml",
    "snappy/testdata",
    "*/doc",
    "*/docs",
    "*/examples",
    "*/tests",
    "tests",
    "*.md",
]

[features]
default = ["static", "bindgen/runtime"]
jemalloc = ["tikv-jemalloc-sys"]
static = ["libz-sys?/static", "bzip2-sys?/static"]
bindgen-runtime = ["bindgen/runtime"]
bindgen-static = ["bindgen/static"]
mt_static = []
io-uring = []
# Build RocksDB with `USE_COROUTINES=1 USE_FOLLY=1` and link against a folly
# install. Enables the multi-level parallel `MultiGet` async-IO path described
# in the RocksDB blog post "Asynchronous IO in RocksDB". Linux only. Requires
# the `ROCKSDB_FOLLY_INSTALL_PATH` env var to point at a folly install built
# by `scripts/build_folly.sh` (or equivalent). Adds a runtime dependency on
# `libglog.so` and `libgflags.so` because folly's build does not produce
# static archives for those two.
coroutines = []
snappy = []
lz4 = ["lz4-sys"]
zstd = ["zstd-sys"]
zlib = ["libz-sys"]
bzip2 = ["bzip2-sys"]
rtti = []
malloc-usable-size = []
zstd-static-linking-only = []
lto = []

[dependencies]
libc = "0.2"
tikv-jemalloc-sys = { version = "0.6", features = [
    "unprefixed_malloc_on_supported_platforms",
], optional = true }
lz4-sys = { version = "1.11", optional = true }
zstd-sys = { version = "2.0", features = [
    "zdict_builder",
    "experimental",
], optional = true }
libz-sys = { version = "1.1", default-features = false, optional = true }
bzip2-sys = { version = "0.1", default-features = false, optional = true }

[dev-dependencies]
const-str = "0.6"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
cc = { version = "1.2", features = ["parallel"] }
bindgen = { version = "0.72", default-features = false }
glob = "0.3"
pkg-config = "0.3"
